Update plugin, compatibility, language, and responses
Corrected JSON formatting in `plugin.json`, expanded version compatibility in `package.json`, and fixed French localization typos. Adjusted API responses in `index.js` for consistent data structure and finalized coding style in `forge-events.js`.

--- a/languages/fr/mff-forge-event.json
+++ b/languages/fr/mff-forge-event.json
@@ -1,6 +1,6 @@
 {
-    "page.title": "Liste des évenements Forge",
-    "menu.title": "Évenements Forge",
+    "page.title": "Liste des événements Forge",
+    "menu.title": "Événements Forge",
     "page.search": "Recherche...",
     "event.description": "Description :",
     "event.extends": "Hérite :"
